<resources>
    <string name="app_name">Ejemplo2</string>
    <string name="hola_mundo">hola mundo</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">altura</string>
    <string name="weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="Calculate">Calcular</string>
    <string name="result">Resultado de IMC</string>
    <string name="recalculate">recalculate</string>
    <string name="error">error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estas por debajo de lo optimo para tu peso y altura</string>

    <string name="title_normal_peso">Normal</string>
    <string name="description_normal_peso">Estas en lo optimo para tu peso y altura</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_Sobrepeso">Estas por encima de lo optimo para tu peso y altura</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_Obesidad">Estas muy por encima de lo optimo para tu peso y altura</string>


    <string name="todo_title">Bienvenido</string>
    <string name="todo_categorias">Categorias</string>
    <string name="todo_tareas">Tareas</string>


</resources>